public/css/styles.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/
/* -------------------------------------------- */

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}

body {
	line-height: 1;
}

ol, ul {
	list-style: none;
}

blockquote, q {
	quotes: none;
}

blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}

table {
	border-collapse: collapse;
	border-spacing: 0;
}

/****************************************************/
/* END RESET ****************************************/
/****************************************************/

@font-face {
  font-family: 'Material Icons';
  font-style: normal;
  font-weight: 400;
  src: url(fonts/Material/MaterialIcons-Regular.eot); /* For IE6-8 */
  src: local('Material Icons'),
       local('MaterialIcons-Regular'),
       url(fonts/Material/MaterialIcons-Regular.woff2) format('woff2'),
       url(fonts/Material/MaterialIcons-Regular.woff) format('woff'),
       url(fonts/Material/MaterialIcons-Regular.ttf) format('truetype');
}

.material-icons {
  font-family: 'Material Icons';
  font-weight: normal;
  font-style: normal;
  font-size: 24px;  /* Preferred icon size */
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  direction: ltr;

  /* Support for all WebKit browsers. */
  -webkit-font-smoothing: antialiased;
  /* Support for Safari and Chrome. */
  text-rendering: optimizeLegibility;

  /* Support for Firefox. */
  -moz-osx-font-smoothing: grayscale;

  /* Support for IE. */
  font-feature-settings: 'liga';
}


/* GLOBALS ******************************************/

form {
    display: flex;
}

input {
  background:none;
  border:none;
  padding: 0;
  font-size:1em;
  color:blue;
  display: block;
}

input:hover {
    cursor: pointer;
}

/* ENVIRONMENT **************************************/

html {
    display: flex;
    flex-direction: column;
    height: 100%;
	position: relative;
	overflow: auto;
}

body {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    font-family: 'Roboto Condensed', sans-serif;
	color: rgb(70, 70, 70);
	overflow: auto;
	height: 100%;
}

/* MAIN ******************************************/

#containerOuter {
	height: 100%;

	display: flex;
	align-items: center;
	justify-content: center;


}

#container {
	border:1px solid green;
	max-height: 800px;
	max-width: 600px;
	width: 100%;
	height: 100%;
}

.chatBoxContainer {
    display: flex;
	height: 100%;
    flex-direction: column;
	border: 1px solid red;
}


.menu {
	padding: 20px;
	border-bottom: 1px solid rgb(180, 180, 180);
}

.menu p {
	padding: 5px 0px 0px 0px;
	font-size: 12px;
}

.mainContent {
	flex-grow: 1;
	display: flex;
	flex-direction: column;
}

.mainContent > div {
    flex-grow: 1;
	display: flex;
	flex-direction: column;
	border: 4px solid green;
}

.growContainer {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    font-weight: 200;
	border: 1px solid green;
}

.growContent {
    flex-grow: 1;
    padding: 20px;
}

.overflowContent {
	max-height: 100%;
	border: 1px solid blue;
}

/* REGISTER + LOGIN BUTTON FORM */

.loginForm {
	flex-direction: column;
	width: 100%;
}

/* MAIN ******************************************/

.activeUsers {
}

.activeUsers li {
	display: inline-block;
	padding: 10px;
	border-radius: 50px;
	background: rgb(217, 217, 217);
}

/* BOTTOM FORM ***************************************/

/* REGISTER + LOGIN BUTTON */

.bottomForm {
	/*display: fixed;*/
	flex-direction: column;
	/*position: absolute;*/
	/*left: 0;
	bottom: 0;*/
	width: 100%;
}

.fullButton {
    padding: 15px;
    width: 100%;
    background: rgb(208, 208, 208);
    color: white;
}

.fullButton:hover {
    background: rgb(172, 172, 172);
}

.registerContainer form input[type=text] {
    display: block;
    padding: 20px;
    border-bottom: 2px solid grey;
    margin-bottom: 20px;
}

.registerContainer form input[type=text]:focus {
    background-color: none;
    border-bottom: 2px solid black;
    outline: none;
}


/* CHAT FORM */

.chatForm {
	/*display: fixed;
	position: absolute;
	left: 0;
	bottom: 0;*/
	width: 100%;
}

.chatFormInner {
	width: 100%;
	display: flex;
	flex-direction: row;
	border-top: 1px solid rgb(212, 212, 212);
}

.chatForm .chatFormInner input {
	padding: 20px;
}

.chatForm .chatFormInner input[type=text] {
	flex-grow: 1;
}

.chatForm .chatFormInner input[type=text]:focus {
    display: block;
	border: none;
}

.chatForm .chatFormInner input[type=submit] {
	width: 80px;
	background: rgb(221, 221, 221);
}


/* USERLIST ******************************************/

.users {

}

.users ul {
	list-style-type: none;
}

.users ul li {
	display: flex;
	flex-direction: row;
	padding: 20px;
	border-bottom: 1px solid rgb(244, 244, 244);
}

.users ul li input {
	margin-left: auto;
}


/* CHATLIST ******************************************/

.membersList {
	font-size: 12px;
}

/* CHAT ******************************************/

.convoContainer {
	
}

.convo {

}

.convo p {
    padding: 20px;
    border-bottom: 1px solid rgb(246, 246, 246);
}

